[gd_scene format=3 uid="uid://dqf2n6e5mdadu"]

[ext_resource type="Script" uid="uid://bykpo4mvrl7i" path="res://addons/icosa/browser/user.gd" id="1_lwnh3"]
[ext_resource type="PackedScene" uid="uid://c7yig47a2sqmr" path="res://addons/icosa/misc/loading_icon.tscn" id="2_blk5g"]
[ext_resource type="Texture2D" uid="uid://ccmeocu15nk48" path="res://addons/icosa/icons/plus.svg" id="3_5bjak"]

[sub_resource type="Gradient" id="Gradient_5bjak"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(0.24696359, 0.24696359, 0.24696359, 0, 0.24696359, 0.24696359, 0.24696359, 0.8, 0.24696359, 0.24696359, 0.24696359, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5d18b"]
gradient = SubResource("Gradient_5bjak")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_w4hgs"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.8, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ctdmc"]
gradient = SubResource("Gradient_w4hgs")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fb6c0"]
bg_color = Color(0.35686275, 0.35686275, 0.35686275, 0.4627451)

[node name="Login" type="MarginContainer" unique_id=929177202]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwnh3")
metadata/_tab_index = 0

[node name="LoginDetails" type="VBoxContainer" parent="." unique_id=2014889934]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LoginStatus" type="RichTextLabel" parent="LoginDetails" unique_id=1505165564]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/paragraph_separation = 15
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "You are not logged in. [url=https://icosa.gallery/device]Login Here.[/url]"
fit_content = true
horizontal_alignment = 1

[node name="LoginCode" type="LineEdit" parent="LoginDetails" unique_id=1176748088]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
placeholder_text = "Enter Code.."
alignment = 1

[node name="Loading" parent="LoginDetails" unique_id=60702666 instance=ExtResource("2_blk5g")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 0.0
texture_under = SubResource("GradientTexture2D_5d18b")
texture_progress = SubResource("GradientTexture2D_ctdmc")

[node name="CancelLogin" type="Button" parent="LoginDetails" unique_id=1100000001]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[node name="UserDetails" type="PanelContainer" parent="." unique_id=1428422549]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fb6c0")

[node name="Assets" type="VBoxContainer" parent="UserDetails" unique_id=468043209]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UserDetails/Assets" unique_id=957340400]
layout_mode = 2

[node name="DisplayAssets" type="VBoxContainer" parent="UserDetails/Assets" unique_id=726846895]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UserDetails/Assets/DisplayAssets" unique_id=2132503454]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Upload" type="Button" parent="UserDetails/Assets/DisplayAssets/HBoxContainer" unique_id=1281207619]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Upload Asset.."

[node name="LoggedInAs" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/HBoxContainer" unique_id=196362142]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "You are logged in as %s.
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logout" type="Button" parent="UserDetails/Assets/DisplayAssets/HBoxContainer" unique_id=1721087871]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = " Logout "

[node name="UserTabs" type="TabContainer" parent="UserDetails/Assets/DisplayAssets" unique_id=478533060]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 2

[node name="My Assets" type="VBoxContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs" unique_id=631680289]
visible = false
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="Title" type="Label" parent="UserDetails/Assets/DisplayAssets/UserTabs/My Assets" unique_id=1875840234]
layout_mode = 2
text = "My Assets"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/My Assets" unique_id=1439996301]
layout_mode = 2
size_flags_vertical = 3

[node name="NoUserAssets" type="Label" parent="UserDetails/Assets/DisplayAssets/UserTabs/My Assets/PanelContainer" unique_id=1371571723]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "you have not uploaded any assets!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/My Assets/PanelContainer" unique_id=1071273529]
layout_mode = 2
size_flags_vertical = 3

[node name="UserAssets" type="FlowContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/My Assets/PanelContainer/ScrollContainer" unique_id=1074685249]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Liked Assets" type="VBoxContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs" unique_id=1539835194]
visible = false
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="Title" type="Label" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets" unique_id=667117225]
layout_mode = 2
text = "Liked Assets"
horizontal_alignment = 1

[node name="Note" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets" unique_id=2066211539]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "âš To add more assets here, go to the icosa.gallery website and click the heart to like assets."
fit_content = true
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets" unique_id=442293651]
layout_mode = 2
size_flags_vertical = 3

[node name="NoLikedAssets" type="Label" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets/PanelContainer" unique_id=1088738537]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "you have not liked any assets!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets/PanelContainer" unique_id=1240730462]
layout_mode = 2
size_flags_vertical = 3

[node name="UserLikedAssets" type="FlowContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/Liked Assets/PanelContainer/ScrollContainer" unique_id=263376440]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Collections" type="VBoxContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs" unique_id=2051155826]
layout_mode = 2
metadata/_tab_index = 2

[node name="Title" type="Label" parent="UserDetails/Assets/DisplayAssets/UserTabs/Collections" unique_id=863671636]
layout_mode = 2
text = "Collections"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/Collections" unique_id=1219451137]
layout_mode = 2
size_flags_vertical = 3

[node name="UserCollections" type="FlowContainer" parent="UserDetails/Assets/DisplayAssets/UserTabs/Collections/ScrollContainer" unique_id=381695660]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CreateCollection" type="Button" parent="UserDetails/Assets/DisplayAssets/UserTabs/Collections" unique_id=1039581069]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Create new collection"
icon = ExtResource("3_5bjak")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="UploadAssetWindow" type="FileDialog" parent="." unique_id=1536313758]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
display_mode = 1
filters = PackedStringArray("*.zip")
use_native_dialog = true

[node name="DeleteAssetWindow" type="ConfirmationDialog" parent="." unique_id=1037970255]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Delete Asset"
initial_position = 1
size = Vector2i(347, 115)
ok_button_text = "Delete"
dialog_autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="DeleteAssetWindow" unique_id=197220650]
offset_left = 8.0
offset_top = 8.0
offset_right = 339.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="DeleteAssetWindow/VBoxContainer" unique_id=1968619099]
layout_mode = 2
size_flags_horizontal = 4
text = "Are you sure you want to delete this asset?"

[node name="DoNotShowDeleteConfirmWindow" type="CheckBox" parent="DeleteAssetWindow/VBoxContainer" unique_id=1287141493]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "do not show again"

[node name="ConfirmLogout" type="ConfirmationDialog" parent="." unique_id=819623213]
oversampling_override = 1.0
size = Vector2i(275, 100)
ok_button_text = "Logout"
dialog_text = "Are you sure you want to log out?"

[connection signal="meta_clicked" from="LoginDetails/LoginStatus" to="." method="_on_login_status_meta_clicked"]
[connection signal="text_changed" from="LoginDetails/LoginCode" to="." method="_on_login_code_text_changed"]
[connection signal="pressed" from="LoginDetails/CancelLogin" to="." method="_on_cancel_login_pressed"]
[connection signal="pressed" from="UserDetails/Assets/DisplayAssets/HBoxContainer/Upload" to="." method="_on_upload_pressed"]
[connection signal="pressed" from="UserDetails/Assets/DisplayAssets/HBoxContainer/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="UserDetails/Assets/DisplayAssets/UserTabs/Collections/CreateCollection" to="." method="_on_create_collection_pressed"]
[connection signal="file_selected" from="UploadAssetWindow" to="." method="_on_upload_asset_file_selected"]
[connection signal="confirmed" from="DeleteAssetWindow" to="." method="_on_delete_asset_window_confirmed"]
[connection signal="toggled" from="DeleteAssetWindow/VBoxContainer/DoNotShowDeleteConfirmWindow" to="." method="_on_do_not_show_delete_confirm_window_toggled"]
